Modification route par défaut
Intégration de $params

--- a/admin/www/.htaccess
+++ b/admin/www/.htaccess
@@ -13,6 +13,29 @@ RewriteEngine on
 #--------------------------------------------------
 
 # -------------------------------
+# ROUTES DES POSTS
+# -------------------------------
+  # LISTE DES POSTS
+  # PATTERN: posts
+  # VERS: index.php?posts=index
+  RewriteRule ^posts$ index.php?posts=index [L]
+
+  # FORMULAIRE D'AJOUT D'UN POST
+  # PATTERN: posts/add/form
+  # VERS: index.php?posts=addForm
+  RewriteRule ^posts\/add\/form$ index.php?posts=addForm [L]
+
+  # AJOUT D'UN POST: INSERT
+  # PATTERN: posts/add/insert
+  # VERS: index.php?posts=addInsert
+  RewriteRule ^posts\/add\/insert$ index.php?posts=addInsert [L]
+
+  # SUPPRESSION D'UN POST: INSERT
+  # PATTERN: posts/xxx/delete
+  # VERS: index.php?posts=delete&id=xxx
+  RewriteRule ^posts\/([1-9][0-9]*)\/delete$ index.php?posts=delete&id=$1 [L]
+
+# -------------------------------
 # ROUTES DES CATEGORIES
 # -------------------------------
   # LISTE DES CATEGORIES
