Modification détails d'un post
Intégration de l'auteur dans la fonction findOneById

--- a/public/www/.htaccess
+++ b/public/www/.htaccess
@@ -14,13 +14,13 @@ RewriteEngine on
 
   #DETAILS D'UNE CATEGORIE
   #PATTERN: categories/{id}/{slug}
-  #VERS: index.php?categorieID=x
-  RewriteRule ^categories\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)$ index.php?categorieID=$1 [L]
+  #VERS: index.php?categorieId=x
+  RewriteRule ^categories\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)$ index.php?categorieId=$1 [L]
 
   #DETAILS D'UN POST
   #PATTERN: posts/{id}/{slug}
-  #VERS: index.php?postID=x
-  RewriteRule ^posts\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)$ index.php?postID=$1 [L]
+  #VERS: index.php?postId=x
+  RewriteRule ^posts\/([1-9][0-9]*)\/([a-z0-9][a-z0-9\-]*)$ index.php?postId=$1 [L]
 
   #FORMULAIRE DE CONNEXION AU BACKOFFICE
   #PATTERN: users/login
